--- a/covid19Map/java/app/src/main/res/values/strings.xml
+++ b/covid19Map/java/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="permission_denied_explanation">Permission was denied, but is needed for core
         functionality.</string>
     <string name="settings">Settings</string>
+    <string name="reloadButton">Reload Map</string>
 
 </resources>
