* a terms and conditions screen * background notification low priority * code reformatting * sample circle on map * new endpoints

--- a/covid19Map/java/app/src/main/res/values/strings.xml
+++ b/covid19Map/java/app/src/main/res/values/strings.xml
@@ -37,5 +37,8 @@
         functionality.</string>
     <string name="settings">Settings</string>
     <string name="reloadButton">Reload Map</string>
+    <string name="accept">Accept</string>
+    <string name="cancel">Cancel</string>
+    <string name="welcomeText">Text to inform you</string>
 
 </resources>
