--- a/covid19Map/java/app/src/main/res/values/strings.xml
+++ b/covid19Map/java/app/src/main/res/values/strings.xml
@@ -1,18 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-     Copyright (C) 2012 The Android Open Source Project
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">COVID19 map</string>
     <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
@@ -39,6 +25,16 @@
     <string name="reloadButton">Reload Map</string>
     <string name="accept">Accept</string>
     <string name="cancel">Cancel</string>
-    <string name="welcomeText">Text to inform you</string>
-
+    <string name="salutation"><b>Hi Friends!</b></string>
+    <string name="welcome_text">\n Thank you for downloading this app!. It feels good to know that you care about the situation and is taking the responsibility to work for it. The app shows the people who has marked themselves within a radius of 100 meters which is small enough to tell the area you should avoid while being big enough to keep them anonymous.\n
+        \n Worried about your data? : \n
+        * We do not take any data from you that can be traced back to you.
+        <br>\n\n How does it work? : \n</br>
+        * The app shows the location of people who has marked themselves as COVID19 infected in a RED color circle. \n
+        * The app shows the location of people who has marked themselves as Flu infected in a YELLOW color circle. \n
+        * The app updates the location every 30 mins if you have marked yourself. \n
+    </string>
+    <string name="summary">So In a nut shell this app shows "Someone(anonymous) who has flu symptoms or covid19 was at that place atleast 30 mins ago. \n Please ue this responsibly. We all depend on you."</string>
+    <string name="consent"> \n Pressing accept button means accepting the terms and conditions.</string>
+    <string name="terms_and_conditions"> \n <a href="https://www.google.com">Terms and conditions</a></string>
 </resources>
