* reload on map loading fixed * welcome page changes

--- a/covid19Map/java/app/src/main/res/values/strings.xml
+++ b/covid19Map/java/app/src/main/res/values/strings.xml
@@ -50,22 +50,22 @@
     <string name="terms">Data Policy\n
 
 \nGeneral Information\n
-1.The app is developed by Amrit and the platform is handled by Optagen Laboratories.\n
-2.Optagen Laboratories is responsible for ensuring that all user data is handled in accordance
+1. The app is developed by Amrit and the platform is handled by Optagen Laboratories.\n
+2. The creater of the app is responsible for ensuring that all user data is handled in accordance
         with GDPR and other local laws.\n
-3.Optagen laboratories guarantees that no user specific data will be collected and sold to a
-        third party. You can read more about our ethical data handling policies here.\n
+3. The creater of the app guarantees that no user specific data will be collected and sold to a
+        third party.\n
 
 \nRemote Storage\n
 1. The app and the platform retains only anonymous data for its computation.\n
 
 \nTerms of Use\n
-1.This Application may only be used to post location to inform people about the risk they have when
+1. This Application may only be used to post location to inform people about the risk they have when
         they come in the range.\n
 
 \nMisc.\n
-1.Your activities on this app should be in accordance with local law and regulations.\n
-2.Dissemination of illegal content will be reported to local law enforcement.\n
-3.We reserve the right to change and modify these terms of service in the future.</string>
+1. Your activities on this app should be in accordance with local law and regulations.\n
+2. Dissemination of illegal content will be reported to local law enforcement.\n
+3. We reserve the right to change and modify these terms of service in the future.</string>
 
 </resources>
